# rtcom-eventlogger-plugins

./: Makefile.am  autogen.sh  configure.ac  rtcom-eventlogger-plugins.pc.in
debian/: README  changelog  control  copyright  librtcom-eventlogger-plugins-dev.install  librtcom-eventlogger-plugins1.install  rules
rtcom-eventlogger-plugins/: call.h  chat.h  sms.h
src/: Makefile.am  call-plugin.c  chat-plugin.c  rtcom-el-plugin-call.c  rtcom-el-plugin-chat.c  rtcom-el-plugin-sms.c  sms-plugin.c
